Changed the board to becomes size of screen once to avoid weird stretching glitches. No more title, controls are disabled while drawing

--- a/style.css
+++ b/style.css
@@ -1,7 +1,7 @@
 *{
   box-sizing:border-box;
 }
-html {
+html, body {
   height: 100%;
   width: 100%;
 }
@@ -30,30 +30,46 @@ body {
   z-index: 1;
 }
 .controls{
-  position: absolute; 
-  bottom: 10px;
+  position: fixed; 
+  top: 1vh;
   width: 100%;
+  height: 20%;
   display: flex;
+  padding: 0 20vw;
   align-items: center;
   justify-content: center;
 }
 
+.mouseDisabled {
+  pointer-events: none;
+}
+
 .controls>* {
-  margin: 0 0.5rem;
+  margin: 0 1vh;
   display: flex;
   align-items: center;
   justify-self: center;
   text-align: center;
-  width: 5rem;
-  height: 2rem;
-  font-size: 18px;
-  padding: 0.3rem 1rem;
+  flex: 1 0 33%;
+  height: 100%;
+  max-height: 8vh;
+  max-width: 18vh;
+  padding: 0.3vh 1vh;
+  font-size: 5vh;
+}
 
+.controls>*:hover {
+  cursor: pointer ;
+}
+
+.controlButton {
+  background-color:rgb(223, 223, 223);
+  border: solid .1vh black;
 }
 
 .title {
   position: absolute;
-  width: 100%;
+  width: 10%;
   top: 0;
   text-align: center; 
   color: white;
@@ -62,11 +78,6 @@ body {
   z-index: 5;
 }
 
-.controlButton {
-  background-color:rgb(223, 223, 223);
-  box-shadow: 0px 0px 3px 1px #000000;
-  border-radius: 2px;
-}
 
 .gridItem{
   background-color: white; 
